add SpringBoot的启动方式