@@ -1,4 +1,24 @@
 # 项目实践与学习
 
-https://www.bswen.com/springboot/2/
+## 一、spring mvc学习
 
+* [springmvc媒体类型处理](gs-spring-boot-rest/springmvc媒体类型处理.md)
+* [SpringBoot的启动方式](gs-spring-boot-rest/SpringBoot的启动方式.md)
+
+
+# spring-study-cases
+学习spring的测试代码
+Plan:
+https://github.com/auser/ng-newsletter-beginner-series.git
+
+深入学习微框架：Spring Boot
+http://www.infoq.com/cn/articles/microframeworks1-spring-boot
+http://www.infoq.com/articles/microframeworks1-spring-boot
+
+https://spring.io/guides/tutorials/bookmarks/
+
+热布署
+-javaagent:F:\server\jrebel\jrebel.jar -Xmx512M -Xms512M -XX:MaxPermSize=1024m -noverify
+
+
+https://www.bswen.com/springboot/2/
